add oled support and print values

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_ldf_mode = chain+
-lib_deps = adafruit/Adafruit BME680 Library@^2.0.1
+lib_deps = 
+        adafruit/Adafruit BME680 Library@^2.0.1
+        olikraus/U8g2@^2.28.8
